--- a/reports/hypothesisComparisons.html
+++ b/reports/hypothesisComparisons.html
@@ -1516,12 +1516,12 @@ div.tocify {
 <pre class="r"><code>library(here)</code></pre>
 <pre><code>## here() starts at Z:/chapter3/conifer-plantation-spread</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## -- Attaching packages --------------------------------------------------------------- tidyverse 1.3.0 --</code></pre>
+<pre><code>## -- Attaching packages -------------------------------------------------------------------------------- tidyverse 1.3.0 --</code></pre>
 <pre><code>## √ ggplot2 3.3.0     √ purrr   0.3.3
-## √ tibble  2.1.3     √ dplyr   0.8.3
-## √ tidyr   1.0.0     √ stringr 1.4.0
-## √ readr   1.3.1     √ forcats 0.4.0</code></pre>
-<pre><code>## -- Conflicts ------------------------------------------------------------------ tidyverse_conflicts() --
+## √ tibble  3.0.1     √ dplyr   0.8.5
+## √ tidyr   1.0.3     √ stringr 1.4.0
+## √ readr   1.3.1     √ forcats 0.5.0</code></pre>
+<pre><code>## -- Conflicts ----------------------------------------------------------------------------------- tidyverse_conflicts() --
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(glmmTMB)</code></pre>
@@ -1535,11 +1535,9 @@ div.tocify {
 ##   vegheight = col_double()
 ## )</code></pre>
 <pre class="r"><code>datlist &lt;- readRDS(here(&quot;output&quot;,&quot;data.rds&quot;))
-results &lt;- readRDS(here(&quot;output&quot;,&quot;results.rds&quot;))</code></pre>
-<pre><code>## Registered S3 method overwritten by &#39;DHARMa&#39;:
-##   method        from   
-##   refit.glmmTMB glmmTMB</code></pre>
-<pre class="r"><code>terrestrial &lt;- filter(types, category == &#39;terrestrial&#39;) %&gt;% pull(type)
+results &lt;- readRDS(here(&quot;output&quot;,&quot;results.rds&quot;))
+
+terrestrial &lt;- filter(types, category == &#39;terrestrial&#39;) %&gt;% pull(type)
 wetland &lt;- filter(types, category == &#39;wetland&#39;) %&gt;% pull(type)
 nodisturbance &lt;- filter(types, is.na(structuring)) %&gt;% pull(type)
 natdisturbance &lt;- filter(types, structuring == &#39;natural disturbance&#39;) %&gt;% pull(type)
@@ -1559,10 +1557,10 @@ datlist &lt;- datlist %&gt;%
 locality.preds &lt;- c(&#39;age&#39;,&#39;bio01&#39;,&#39;bio19&#39;,&#39;seeds.ExP&#39;,&#39;seeds.WALD&#39;,&#39;relelev&#39;)
 str(datlist, 1)</code></pre>
 <pre><code>## List of 4
-##  $ Larix              :Classes &#39;tbl_df&#39;, &#39;tbl&#39; and &#39;data.frame&#39;: 32238 obs. of  50 variables:
-##  $ P.abies            :Classes &#39;tbl_df&#39;, &#39;tbl&#39; and &#39;data.frame&#39;: 40170 obs. of  50 variables:
-##  $ P.contorta         :Classes &#39;tbl_df&#39;, &#39;tbl&#39; and &#39;data.frame&#39;: 13151 obs. of  50 variables:
-##  $ P.sitchensis-lutzii:Classes &#39;tbl_df&#39;, &#39;tbl&#39; and &#39;data.frame&#39;: 86923 obs. of  50 variables:</code></pre>
+##  $ Larix              : tibble [32,238 x 50] (S3: tbl_df/tbl/data.frame)
+##  $ P.abies            : tibble [40,170 x 50] (S3: tbl_df/tbl/data.frame)
+##  $ P.contorta         : tibble [13,151 x 50] (S3: tbl_df/tbl/data.frame)
+##  $ P.sitchensis-lutzii: tibble [86,923 x 50] (S3: tbl_df/tbl/data.frame)</code></pre>
 <div id="loop-through-species" class="section level1">
 <h1>Loop through species</h1>
 <pre class="r"><code>results.wetland &lt;- list()
@@ -1689,29 +1687,28 @@ saveRDS(results.disturbance, here(&quot;output&quot;,&quot;results-disturbance.r
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] glmmTMB_1.0.1   forcats_0.4.0   stringr_1.4.0   dplyr_0.8.3    
-##  [5] purrr_0.3.3     readr_1.3.1     tidyr_1.0.0     tibble_2.1.3   
+##  [1] glmmTMB_1.0.1   forcats_0.5.0   stringr_1.4.0   dplyr_0.8.5    
+##  [5] purrr_0.3.3     readr_1.3.1     tidyr_1.0.3     tibble_3.0.1   
 ##  [9] ggplot2_3.3.0   tidyverse_1.3.0 here_0.1       
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] httr_1.4.1       jsonlite_1.6     splines_3.6.3    foreach_1.5.0   
-##  [5] modelr_0.1.5     assertthat_0.2.1 cellranger_1.1.0 yaml_2.2.0      
-##  [9] pillar_1.4.3     backports_1.1.5  lattice_0.20-38  glue_1.3.1      
-## [13] digest_0.6.23    rvest_0.3.5      minqa_1.2.4      colorspace_1.4-1
-## [17] htmltools_0.4.0  Matrix_1.2-18    spaMM_3.0.0      pkgconfig_2.0.3 
-## [21] broom_0.5.2      haven_2.2.0      xtable_1.8-4     mvtnorm_1.0-11  
-## [25] scales_1.1.0     lme4_1.1-21      proxy_0.4-23     emmeans_1.4.3.01
-## [29] generics_0.0.2   withr_2.2.0      pbapply_1.4-2    TMB_1.7.16      
-## [33] cli_2.0.2        magrittr_1.5     crayon_1.3.4     readxl_1.3.1    
-## [37] estimability_1.3 evaluate_0.14    fs_1.3.1         fansi_0.4.1     
-## [41] nlme_3.1-144     MASS_7.3-51.5    xml2_1.2.2       tools_3.6.3     
-## [45] hms_0.5.3        lifecycle_0.2.0  munsell_0.5.0    reprex_0.3.0    
-## [49] DHARMa_0.2.7     compiler_3.6.3   rlang_0.4.5      grid_3.6.3      
-## [53] nloptr_1.2.1     iterators_1.0.12 rstudioapi_0.11  rmarkdown_2.1   
-## [57] boot_1.3-24      gtable_0.3.0     codetools_0.2-16 DBI_1.0.0       
-## [61] R6_2.4.1         lubridate_1.7.4  knitr_1.28       rprojroot_1.3-2 
-## [65] stringi_1.4.3    parallel_3.6.3   Rcpp_1.0.3       vctrs_0.2.4     
-## [69] dbplyr_1.4.2     tidyselect_0.2.5 xfun_0.13        coda_0.19-3</code></pre>
+##  [1] Rcpp_1.0.3       mvtnorm_1.0-11   lubridate_1.7.4  lattice_0.20-38 
+##  [5] assertthat_0.2.1 rprojroot_1.3-2  digest_0.6.23    R6_2.4.1        
+##  [9] cellranger_1.1.0 backports_1.1.5  reprex_0.3.0     coda_0.19-3     
+## [13] evaluate_0.14    httr_1.4.1       pillar_1.4.3     rlang_0.4.6     
+## [17] readxl_1.3.1     rstudioapi_0.11  minqa_1.2.4      nloptr_1.2.1    
+## [21] Matrix_1.2-18    rmarkdown_2.1    splines_3.6.3    lme4_1.1-21     
+## [25] TMB_1.7.16       munsell_0.5.0    broom_0.5.6      compiler_3.6.3  
+## [29] modelr_0.1.5     xfun_0.13        pkgconfig_2.0.3  htmltools_0.4.0 
+## [33] tidyselect_1.1.0 fansi_0.4.1      crayon_1.3.4     dbplyr_1.4.2    
+## [37] withr_2.2.0      MASS_7.3-51.5    grid_3.6.3       xtable_1.8-4    
+## [41] nlme_3.1-144     jsonlite_1.6     gtable_0.3.0     lifecycle_0.2.0 
+## [45] DBI_1.0.0        magrittr_1.5     scales_1.1.0     estimability_1.3
+## [49] cli_2.0.2        stringi_1.4.3    fs_1.4.1         xml2_1.2.2      
+## [53] ellipsis_0.3.0   generics_0.0.2   vctrs_0.2.4      boot_1.3-24     
+## [57] tools_3.6.3      glue_1.4.1       hms_0.5.3        emmeans_1.4.3.01
+## [61] yaml_2.2.0       colorspace_1.4-1 rvest_0.3.5      knitr_1.28      
+## [65] haven_2.2.0</code></pre>
 </div>
 
 
