--- a/reports/hypothesisComparisons.html
+++ b/reports/hypothesisComparisons.html
@@ -1653,9 +1653,11 @@ for (i in seq_along(datlist)) { # i &lt;- 1
   dat &lt;- datlist[[i]]
   stopifnot(sum(complete.cases(dat)) == nrow(dat))
 
-  means &lt;- dat[, locality.preds] %&gt;% map_dbl(mean)
-  sds &lt;- dat[, locality.preds] %&gt;% map_dbl(sd)
-  for (j in locality.preds) {
+  dat &lt;- mutate(dat, across(starts_with(&quot;seeds&quot;), log))
+  dat &lt;- mutate(dat, across(starts_with(&quot;seeds&quot;), ~ .x - mean(.x)))
+  means &lt;- dat[, c(&#39;age&#39;,&#39;bio01&#39;,&#39;bio19&#39;,&#39;relelev&#39;)] %&gt;% map_dbl(mean)
+  sds &lt;- dat[, c(&#39;age&#39;,&#39;bio01&#39;,&#39;bio19&#39;,&#39;relelev&#39;)] %&gt;% map_dbl(sd)
+  for (j in c(&#39;age&#39;,&#39;bio01&#39;,&#39;bio19&#39;,&#39;relelev&#39;)) {
     dat &lt;- modify_at(dat, .at = j, ~ (. - means[j]) / sds[j])
   }
 
@@ -1681,7 +1683,7 @@ for (i in seq_along(datlist)) { # i &lt;- 1
   structuring &lt;- filter(arith, n &gt; 0) %&gt;% pull(structuring) %&gt;% unique()
   
   selmod &lt;- results$models[[species]]
-  covars &lt;- intersect(c(&#39;seeds.WALD&#39;, &#39;age&#39;, &#39;bio01&#39;,&#39;bio19&#39;, &#39;relelev&#39;),
+  covars &lt;- intersect(c(&#39;age&#39;, &#39;bio01&#39;,&#39;bio19&#39;, &#39;relelev&#39;),
                       attributes(attributes(selmod$frame)$terms)$term.labels)
   # dd &lt;- data.frame(a = gl(2,6), b = gl(6,1,12))
   # model.matrix(~ a + b, dd)
@@ -1690,10 +1692,11 @@ for (i in seq_along(datlist)) { # i &lt;- 1
                            paste(category[!category == &quot;terr&quot;], collapse= &quot;+&quot;), &quot;+&quot;,
                            paste(structuring[!structuring == &quot;nodist&quot;], collapse= &quot;+&quot;), &quot;+&quot;,
                            &quot;(1 | locality)&quot;))
-  
-  m &lt;- glmmTMB(formula = form, data = dat, family = selmod$call$family, 
-               ziformula = selmod$call$ziformula)
-  
+  eval(bquote(
+    m &lt;- glmmTMB(formula = form, data = dat, offset = .(selmod$call$offset), 
+                 family = selmod$call$family, ziformula = selmod$call$ziformula)
+  ))
+
   newdat &lt;- expand_grid(category, structuring) %&gt;%
     sjmisc::to_dummy() %&gt;%
     setNames(c(category[order(category)], structuring[order(structuring)])) %&gt;% 
@@ -1710,12 +1713,17 @@ for (i in seq_along(datlist)) { # i &lt;- 1
   link.scaled &lt;- mutate_at(link, c(&#39;fit&#39;, &#39;ci.l&#39;, &#39;ci.u&#39;), 
                            ~ `/`(., scaler))
 
-  results.hypothesis[[i]] &lt;- bind_rows(arith.scaled, link.scaled)
+  results.hypothesis[[i]] &lt;- list(arithmetic = arith.scaled, 
+                                  model.preds = link.scaled)
 }</code></pre>
 <pre><code>## `summarise()` regrouping output by &#39;category&#39; (override with `.groups` argument)
 ## `summarise()` regrouping output by &#39;category&#39; (override with `.groups` argument)
-## `summarise()` regrouping output by &#39;category&#39; (override with `.groups` argument)
 ## `summarise()` regrouping output by &#39;category&#39; (override with `.groups` argument)</code></pre>
+<pre><code>## Warning in fitTMB(TMBStruc): Model convergence problem; non-positive-definite
+## Hessian matrix. See vignette(&#39;troubleshooting&#39;)</code></pre>
+<pre><code>## Warning in fitTMB(TMBStruc): Model convergence problem; false convergence (8).
+## See vignette(&#39;troubleshooting&#39;)</code></pre>
+<pre><code>## `summarise()` regrouping output by &#39;category&#39; (override with `.groups` argument)</code></pre>
 <pre class="r"><code>names(results.hypothesis) &lt;- names(datlist)</code></pre>
 </div>
 <div id="save-results" class="section level1">
@@ -1727,7 +1735,7 @@ for (i in seq_along(datlist)) { # i &lt;- 1
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>## R version 3.6.3 (2020-02-29)
 ## Platform: x86_64-pc-linux-gnu (64-bit)
-## Running under: Ubuntu 20.04.1 LTS
+## Running under: Ubuntu 20.04.2 LTS
 ## 
 ## Matrix products: default
 ## BLAS:   /usr/lib/x86_64-linux-gnu/blas/libblas.so.3.9.0
