squash bug - save results

--- a/reports/modelingData.html
+++ b/reports/modelingData.html
@@ -3940,369 +3940,8 @@ list(Ps_link, Pa_link, L_link) %&gt;%
     scaler &lt;- filter(x, nin == contrasttype, is.na(locality)) %&gt;% 
       pull(fit)
     mutate(x, across(c(&#39;fit&#39;, &#39;ci.l&#39;, &#39;ci.u&#39;), ~ `/`(., scaler)))
-  })) %&gt;% pull(preds)</code></pre>
-<pre><code>## [[1]]
-## # A tibble: 1,204 x 5
-##    locality           nin     fit   ci.l   ci.u
-##    &lt;chr&gt;              &lt;chr&gt; &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;
-##  1 &lt;NA&gt;               T4    1     0.602   1.66 
-##  2 aarheia            T4    0.644 0.354   1.17 
-##  3 alstahaugmyran     T4    0.147 0.0378  0.572
-##  4 dale               T4    2.09  0.694   6.27 
-##  5 fjoesne            T4    0.136 0.0186  0.992
-##  6 foersvoll          T4    4.66  2.85    7.60 
-##  7 fuglavasstoppen    T4    1.22  0.503   2.97 
-##  8 gryttingdalen-oest T4    5.82  2.27   14.9  
-##  9 gryttingdalen-vest T4    3.60  1.32    9.84 
-## 10 haakoeya           T4    0.185 0.0198  1.73 
-## # ... with 1,194 more rows
-## 
-## [[2]]
-## # A tibble: 340 x 5
-##    locality     nin     fit  ci.l  ci.u
-##    &lt;chr&gt;        &lt;chr&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
-##  1 &lt;NA&gt;         T4    1     0.628 1.59 
-##  2 boerve       T4    1.97  0.929 4.16 
-##  3 bondhusdalen T4    1.03  0.310 3.44 
-##  4 efteland     T4    2.55  1.50  4.33 
-##  5 hjelmtveit   T4    0.698 0.309 1.57 
-##  6 indre-arna   T4    1.50  0.770 2.94 
-##  7 kvamskogen   T4    1.31  0.510 3.35 
-##  8 myklebostad  T4    0.788 0.240 2.59 
-##  9 myrvoll      T4    1.18  0.367 3.79 
-## 10 mysingveien  T4    0.472 0.231 0.966
-## # ... with 330 more rows
-## 
-## [[3]]
-## # A tibble: 192 x 5
-##    locality       nin     fit   ci.l  ci.u
-##    &lt;chr&gt;          &lt;chr&gt; &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt;
-##  1 &lt;NA&gt;           T4    1     0.540   1.85
-##  2 anisdal        T4    0.960 0.264   3.49
-##  3 engjane        T4    1.35  0.767   2.36
-##  4 haalandsbotn   T4    0.560 0.125   2.50
-##  5 hoegaas        T4    4.43  2.58    7.60
-##  6 hyljafjellet   T4    0.819 0.249   2.70
-##  7 indre-bjotveit T4    2.34  0.930   5.88
-##  8 knappeidet     T4    1.54  0.482   4.93
-##  9 myrvoll        T4    0.482 0.0890  2.61
-## 10 oaland         T4    0.560 0.127   2.46
-## # ... with 182 more rows
-## 
-## [[4]]
-## # A tibble: 28 x 5
-##        fit locality nin           ci.l     ci.u
-##      &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;        &lt;dbl&gt;    &lt;dbl&gt;
-##  1  1      &lt;NA&gt;     T4         0.543     1.84  
-##  2  0.0242 &lt;NA&gt;     T44        0.00869   0.0677
-##  3  0.296  &lt;NA&gt;     artificial 0.158     0.555 
-##  4  0.111  &lt;NA&gt;     T45        0.0598    0.208 
-##  5  0.346  &lt;NA&gt;     T32        0.186     0.644 
-##  6  2.24   &lt;NA&gt;     V9         1.19      4.21  
-##  7  1.15   &lt;NA&gt;     T34        0.625     2.11  
-##  8  1.22   &lt;NA&gt;     V12        0.241     6.14  
-##  9  0.607  &lt;NA&gt;     V1         0.326     1.13  
-## 10 20.9    &lt;NA&gt;     T13        3.87    113.    
-## # ... with 18 more rows
-## 
-## [[5]]
-## # A tibble: 28 x 5
-##        fit locality nin           ci.l   ci.u
-##      &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;        &lt;dbl&gt;  &lt;dbl&gt;
-##  1 1       &lt;NA&gt;     T4         0.619   1.62  
-##  2 0.00448 &lt;NA&gt;     T44        0.00130 0.0155
-##  3 0.444   &lt;NA&gt;     artificial 0.268   0.735 
-##  4 0.0986  &lt;NA&gt;     T45        0.0598  0.163 
-##  5 0.354   &lt;NA&gt;     T32        0.216   0.579 
-##  6 3.87    &lt;NA&gt;     V9         2.27    6.59  
-##  7 1.44    &lt;NA&gt;     T34        0.895   2.31  
-##  8 0.609   &lt;NA&gt;     V12        0.0604  6.13  
-##  9 1.00    &lt;NA&gt;     V1         0.615   1.63  
-## 10 1       &lt;NA&gt;     T13        0.619   1.62  
-## # ... with 18 more rows
-## 
-## [[6]]
-## # A tibble: 28 x 5
-##        fit locality nin          ci.l     ci.u
-##      &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;       &lt;dbl&gt;    &lt;dbl&gt;
-##  1  1      &lt;NA&gt;     T4         0.553    1.81  
-##  2  0.0293 &lt;NA&gt;     T44        0.0108   0.0797
-##  3  0.301  &lt;NA&gt;     artificial 0.162    0.558 
-##  4  0.113  &lt;NA&gt;     T45        0.0615   0.207 
-##  5  0.356  &lt;NA&gt;     T32        0.194    0.653 
-##  6  2.34   &lt;NA&gt;     V9         1.26     4.33  
-##  7  1.16   &lt;NA&gt;     T34        0.643    2.10  
-##  8  1.23   &lt;NA&gt;     V12        0.245    6.20  
-##  9  0.612  &lt;NA&gt;     V1         0.334    1.12  
-## 10 21.6    &lt;NA&gt;     T13        4.02   116.    
-## # ... with 18 more rows
-## 
-## [[7]]
-## # A tibble: 28 x 5
-##        fit locality nin            ci.l   ci.u
-##      &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;         &lt;dbl&gt;  &lt;dbl&gt;
-##  1 1       &lt;NA&gt;     T4         0.616    1.62  
-##  2 0.00262 &lt;NA&gt;     T44        0.000628 0.0109
-##  3 0.418   &lt;NA&gt;     artificial 0.251    0.694 
-##  4 0.0872  &lt;NA&gt;     T45        0.0525   0.145 
-##  5 0.325   &lt;NA&gt;     T32        0.198    0.535 
-##  6 3.57    &lt;NA&gt;     V9         2.09     6.10  
-##  7 1.37    &lt;NA&gt;     T34        0.845    2.21  
-##  8 0.581   &lt;NA&gt;     V12        0.0578   5.84  
-##  9 0.860   &lt;NA&gt;     V1         0.526    1.41  
-## 10 1       &lt;NA&gt;     T13        0.616    1.62  
-## # ... with 18 more rows
-## 
-## [[8]]
-## # A tibble: 28 x 5
-##        fit locality nin          ci.l     ci.u
-##      &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;       &lt;dbl&gt;    &lt;dbl&gt;
-##  1  1      &lt;NA&gt;     T4         0.548    1.83  
-##  2  0.0306 &lt;NA&gt;     T44        0.0116   0.0811
-##  3  0.301  &lt;NA&gt;     artificial 0.161    0.561 
-##  4  0.114  &lt;NA&gt;     T45        0.0613   0.210 
-##  5  0.353  &lt;NA&gt;     T32        0.191    0.654 
-##  6  2.36   &lt;NA&gt;     V9         1.27     4.39  
-##  7  1.16   &lt;NA&gt;     T34        0.636    2.12  
-##  8  1.21   &lt;NA&gt;     V12        0.241    6.11  
-##  9  0.621  &lt;NA&gt;     V1         0.337    1.15  
-## 10 20.5    &lt;NA&gt;     T13        3.82   110.    
-## # ... with 18 more rows
-## 
-## [[9]]
-## # A tibble: 28 x 5
-##        fit locality nin            ci.l    ci.u
-##      &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;         &lt;dbl&gt;   &lt;dbl&gt;
-##  1 1       &lt;NA&gt;     T4         0.628    1.59   
-##  2 0.00162 &lt;NA&gt;     T44        0.000297 0.00885
-##  3 0.409   &lt;NA&gt;     artificial 0.251    0.667  
-##  4 0.0830  &lt;NA&gt;     T45        0.0508   0.136  
-##  5 0.318   &lt;NA&gt;     T32        0.197    0.515  
-##  6 3.29    &lt;NA&gt;     V9         1.96     5.50   
-##  7 1.28    &lt;NA&gt;     T34        0.808    2.04   
-##  8 0.555   &lt;NA&gt;     V12        0.0553   5.57   
-##  9 0.860   &lt;NA&gt;     V1         0.536    1.38   
-## 10 1       &lt;NA&gt;     T13        0.628    1.59   
-## # ... with 18 more rows
-## 
-## [[10]]
-## # A tibble: 17 x 5
-##        fit locality nin            ci.l    ci.u
-##      &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;         &lt;dbl&gt;   &lt;dbl&gt;
-##  1 1       &lt;NA&gt;     T4         0.518    1.93   
-##  2 0.00618 &lt;NA&gt;     T44        0.000317 0.120  
-##  3 0.258   &lt;NA&gt;     artificial 0.121    0.550  
-##  4 0.00229 &lt;NA&gt;     T45        0.000569 0.00922
-##  5 0.482   &lt;NA&gt;     T32        0.247    0.943  
-##  6 1       &lt;NA&gt;     V9         0.518    1.93   
-##  7 1.66    &lt;NA&gt;     V12        0.723    3.83   
-##  8 0.183   &lt;NA&gt;     V1         0.0554   0.605  
-##  9 0.213   &lt;NA&gt;     T13        0.0594   0.762  
-## 10 0.459   &lt;NA&gt;     T41        0.159    1.33   
-## 11 0.813   &lt;NA&gt;     T1         0.301    2.19   
-## 12 0.628   &lt;NA&gt;     V2         0.262    1.51   
-## 13 1       &lt;NA&gt;     T2         0.518    1.93   
-## 14 1       &lt;NA&gt;     V10        0.518    1.93   
-## 15 2.85    &lt;NA&gt;     T31        1.05     7.74   
-## 16 1       &lt;NA&gt;     V4         0.518    1.93   
-## 17 1       &lt;NA&gt;     V3         0.518    1.93   
-## 
-## [[11]]
-## # A tibble: 17 x 5
-##           fit locality nin            ci.l          ci.u
-##         &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;         &lt;dbl&gt;         &lt;dbl&gt;
-##  1  1         &lt;NA&gt;     T4         4.47e- 1       2.24   
-##  2  1         &lt;NA&gt;     T44        4.47e- 1       2.24   
-##  3  1.23      &lt;NA&gt;     artificial 4.90e- 1       3.09   
-##  4  0.0000643 &lt;NA&gt;     T45        4.65e- 7       0.00888
-##  5  0.272     &lt;NA&gt;     T32        1.10e- 1       0.672  
-##  6 12.1       &lt;NA&gt;     V9         3.09e- 1     471.     
-##  7 10.2       &lt;NA&gt;     V12        3.44e+ 0      30.5    
-##  8  0.687     &lt;NA&gt;     V1         1.65e- 1       2.87   
-##  9  0.0254    &lt;NA&gt;     T13        1.82e- 3       0.356  
-## 10  0.731     &lt;NA&gt;     T41        2.15e- 1       2.48   
-## 11  0.882     &lt;NA&gt;     T1         2.36e- 1       3.30   
-## 12  1.52      &lt;NA&gt;     V2         5.32e- 1       4.32   
-## 13  0.000335  &lt;NA&gt;     T2         1.01e-13 1110797.     
-## 14  1.83      &lt;NA&gt;     V10        1.66e- 2     201.     
-## 15  1         &lt;NA&gt;     T31        4.47e- 1       2.24   
-## 16  0.286     &lt;NA&gt;     V4         1.44e- 2       5.67   
-## 17  0.598     &lt;NA&gt;     V3         6.29e- 2       5.68   
-## 
-## [[12]]
-## # A tibble: 17 x 5
-##        fit locality nin            ci.l    ci.u
-##      &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;         &lt;dbl&gt;   &lt;dbl&gt;
-##  1 1       &lt;NA&gt;     T4         0.540    1.85   
-##  2 0.00645 &lt;NA&gt;     T44        0.000339 0.123  
-##  3 0.263   &lt;NA&gt;     artificial 0.128    0.540  
-##  4 0.00241 &lt;NA&gt;     T45        0.000615 0.00945
-##  5 0.492   &lt;NA&gt;     T32        0.262    0.922  
-##  6 1       &lt;NA&gt;     V9         0.540    1.85   
-##  7 1.70    &lt;NA&gt;     V12        0.759    3.80   
-##  8 0.242   &lt;NA&gt;     V1         0.0808   0.724  
-##  9 0.226   &lt;NA&gt;     T13        0.0647   0.789  
-## 10 0.468   &lt;NA&gt;     T41        0.167    1.31   
-## 11 0.795   &lt;NA&gt;     T1         0.299    2.12   
-## 12 0.777   &lt;NA&gt;     V2         0.340    1.78   
-## 13 1       &lt;NA&gt;     T2         0.540    1.85   
-## 14 1       &lt;NA&gt;     V10        0.540    1.85   
-## 15 2.92    &lt;NA&gt;     T31        1.11     7.66   
-## 16 1       &lt;NA&gt;     V4         0.540    1.85   
-## 17 1       &lt;NA&gt;     V3         0.540    1.85   
-## 
-## [[13]]
-## # A tibble: 17 x 5
-##          fit locality nin            ci.l    ci.u
-##        &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;         &lt;dbl&gt;   &lt;dbl&gt;
-##  1 1         &lt;NA&gt;     T4         4.68e- 1 2.14e+0
-##  2 1         &lt;NA&gt;     T44        4.68e- 1 2.14e+0
-##  3 1.18      &lt;NA&gt;     artificial 4.78e- 1 2.90e+0
-##  4 0.0000623 &lt;NA&gt;     T45        4.74e- 7 8.19e-3
-##  5 0.253     &lt;NA&gt;     T32        1.04e- 1 6.14e-1
-##  6 9.29      &lt;NA&gt;     V9         4.03e- 1 2.14e+2
-##  7 6.73      &lt;NA&gt;     V12        2.37e+ 0 1.91e+1
-##  8 0.180     &lt;NA&gt;     V1         3.21e- 2 1.01e+0
-##  9 0.0276    &lt;NA&gt;     T13        2.03e- 3 3.76e-1
-## 10 0.769     &lt;NA&gt;     T41        2.43e- 1 2.44e+0
-## 11 0.803     &lt;NA&gt;     T1         2.26e- 1 2.86e+0
-## 12 0.808     &lt;NA&gt;     V2         2.64e- 1 2.47e+0
-## 13 0.0000118 &lt;NA&gt;     T2         6.32e-20 2.20e+9
-## 14 1.73      &lt;NA&gt;     V10        2.15e- 2 1.40e+2
-## 15 1         &lt;NA&gt;     T31        4.68e- 1 2.14e+0
-## 16 1.31      &lt;NA&gt;     V4         8.10e- 2 2.12e+1
-## 17 4.91      &lt;NA&gt;     V3         4.73e- 1 5.09e+1
-## 
-## [[14]]
-## # A tibble: 17 x 5
-##        fit locality nin            ci.l    ci.u
-##      &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;         &lt;dbl&gt;   &lt;dbl&gt;
-##  1 1       &lt;NA&gt;     T4         0.533    1.88   
-##  2 0.00609 &lt;NA&gt;     T44        0.000313 0.119  
-##  3 0.269   &lt;NA&gt;     artificial 0.129    0.564  
-##  4 0.00225 &lt;NA&gt;     T45        0.000564 0.00895
-##  5 0.477   &lt;NA&gt;     T32        0.249    0.912  
-##  6 1       &lt;NA&gt;     V9         0.533    1.88   
-##  7 1.63    &lt;NA&gt;     V12        0.724    3.68   
-##  8 0.283   &lt;NA&gt;     V1         0.0989   0.808  
-##  9 0.218   &lt;NA&gt;     T13        0.0615   0.774  
-## 10 0.452   &lt;NA&gt;     T41        0.159    1.29   
-## 11 0.725   &lt;NA&gt;     T1         0.269    1.95   
-## 12 0.666   &lt;NA&gt;     V2         0.283    1.57   
-## 13 1       &lt;NA&gt;     T2         0.533    1.88   
-## 14 1       &lt;NA&gt;     V10        0.533    1.88   
-## 15 2.84    &lt;NA&gt;     T31        1.07     7.57   
-## 16 1       &lt;NA&gt;     V4         0.533    1.88   
-## 17 1       &lt;NA&gt;     V3         0.533    1.88   
-## 
-## [[15]]
-## # A tibble: 17 x 5
-##           fit locality nin            ci.l         ci.u
-##         &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;         &lt;dbl&gt;        &lt;dbl&gt;
-##  1  1         &lt;NA&gt;     T4         4.25e- 1      2.35   
-##  2  1         &lt;NA&gt;     T44        4.25e- 1      2.35   
-##  3  1.28      &lt;NA&gt;     artificial 4.97e- 1      3.31   
-##  4  0.0000685 &lt;NA&gt;     T45        5.05e- 7      0.00930
-##  5  0.283     &lt;NA&gt;     T32        1.12e- 1      0.718  
-##  6 10.5       &lt;NA&gt;     V9         2.85e- 1    390.     
-##  7  9.13      &lt;NA&gt;     V12        3.06e+ 0     27.2    
-##  8  0.134     &lt;NA&gt;     V1         1.30e- 2      1.37   
-##  9  0.0251    &lt;NA&gt;     T13        1.77e- 3      0.358  
-## 10  0.824     &lt;NA&gt;     T41        2.45e- 1      2.77   
-## 11  1.00      &lt;NA&gt;     T1         2.72e- 1      3.71   
-## 12  1.11      &lt;NA&gt;     V2         3.45e- 1      3.57   
-## 13  0.000341  &lt;NA&gt;     T2         1.82e-13 639637.     
-## 14  1.73      &lt;NA&gt;     V10        1.58e- 2    189.     
-## 15  1         &lt;NA&gt;     T31        4.25e- 1      2.35   
-## 16  0.301     &lt;NA&gt;     V4         1.51e- 2      6.01   
-## 17  0.638     &lt;NA&gt;     V3         6.65e- 2      6.12   
-## 
-## [[16]]
-## # A tibble: 12 x 5
-##         fit locality nin             ci.l     ci.u
-##       &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;    &lt;dbl&gt;
-##  1   1      &lt;NA&gt;     T4           0.518      1.93 
-##  2   0.0348 &lt;NA&gt;     T44          0.00131    0.929
-##  3   6.46   &lt;NA&gt;     artificial   3.22      13.0  
-##  4   0.487  &lt;NA&gt;     T45          0.242      0.980
-##  5   1.76   &lt;NA&gt;     T32          0.890      3.49 
-##  6   0.358  &lt;NA&gt;     V9           0.0728     1.76 
-##  7   2.10   &lt;NA&gt;     T34          1.06       4.16 
-##  8   0.958  &lt;NA&gt;     V1           0.237      3.88 
-##  9   0.0628 &lt;NA&gt;     T41          0.0109     0.362
-## 10   0.754  &lt;NA&gt;     T1           0.150      3.79 
-## 11   0.675  &lt;NA&gt;     V2           0.0172    26.5  
-## 12 451.     &lt;NA&gt;     T17        203.      1003.   
-## 
-## [[17]]
-## # A tibble: 12 x 5
-##         fit locality nin             ci.l    ci.u
-##       &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;   &lt;dbl&gt;
-##  1   1      &lt;NA&gt;     T4           0.512     1.95 
-##  2   0.0387 &lt;NA&gt;     T44          0.00145   1.03 
-##  3   6.99   &lt;NA&gt;     artificial   3.45     14.2  
-##  4   0.543  &lt;NA&gt;     T45          0.268     1.10 
-##  5   2.07   &lt;NA&gt;     T32          1.04      4.13 
-##  6   0.661  &lt;NA&gt;     V9           0.169     2.58 
-##  7   2.28   &lt;NA&gt;     T34          1.14      4.57 
-##  8   1.06   &lt;NA&gt;     V1           0.260     4.34 
-##  9   0.0616 &lt;NA&gt;     T41          0.0106    0.358
-## 10   0.768  &lt;NA&gt;     T1           0.151     3.91 
-## 11   0.732  &lt;NA&gt;     V2           0.0187   28.7  
-## 12 422.     &lt;NA&gt;     T17        187.      955.   
-## 
-## [[18]]
-## # A tibble: 12 x 5
-##          fit locality nin                 ci.l    ci.u
-##        &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;              &lt;dbl&gt;   &lt;dbl&gt;
-##  1   1       &lt;NA&gt;     T4          0.234          4.28 
-##  2   0.00377 &lt;NA&gt;     T44         0.0000000780 182.   
-##  3  17.0     &lt;NA&gt;     artificial  3.69          78.2  
-##  4   0.0564  &lt;NA&gt;     T45         0.00988        0.322
-##  5   0.664   &lt;NA&gt;     T32         0.151          2.91 
-##  6   0.0126  &lt;NA&gt;     V9          0.0000186      8.58 
-##  7   5.04    &lt;NA&gt;     T34         1.31          19.3  
-##  8   1       &lt;NA&gt;     V1          0.234          4.28 
-##  9   0.0239  &lt;NA&gt;     T41         0.00183        0.312
-## 10   0.00770 &lt;NA&gt;     T1          0.000221       0.269
-## 11   1       &lt;NA&gt;     V2          0.234          4.28 
-## 12 177.      &lt;NA&gt;     T17        38.0          823.   
-## 
-## [[19]]
-## # A tibble: 12 x 5
-##         fit locality nin             ci.l     ci.u
-##       &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;    &lt;dbl&gt;
-##  1   1      &lt;NA&gt;     T4           0.522      1.91 
-##  2   0.0393 &lt;NA&gt;     T44          0.00147    1.05 
-##  3   7.28   &lt;NA&gt;     artificial   3.64      14.6  
-##  4   0.533  &lt;NA&gt;     T45          0.272      1.04 
-##  5   2.07   &lt;NA&gt;     T32          1.06       4.04 
-##  6   0.615  &lt;NA&gt;     V9           0.157      2.40 
-##  7   2.27   &lt;NA&gt;     T34          1.16       4.41 
-##  8   1.07   &lt;NA&gt;     V1           0.261      4.36 
-##  9   0.0607 &lt;NA&gt;     T41          0.0102     0.362
-## 10   0.772  &lt;NA&gt;     T1           0.155      3.84 
-## 11   0.743  &lt;NA&gt;     V2           0.0193    28.6  
-## 12 474.     &lt;NA&gt;     T17        220.      1020.   
-## 
-## [[20]]
-## # A tibble: 12 x 5
-##          fit locality nin                ci.l    ci.u
-##        &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;             &lt;dbl&gt;   &lt;dbl&gt;
-##  1   1       &lt;NA&gt;     T4          0.213         4.70 
-##  2   0.00593 &lt;NA&gt;     T44         0.000000425  82.7  
-##  3  15.6     &lt;NA&gt;     artificial  3.28         73.9  
-##  4   0.0560  &lt;NA&gt;     T45         0.00852       0.368
-##  5   0.711   &lt;NA&gt;     T32         0.142         3.56 
-##  6   0.0285  &lt;NA&gt;     V9          0.0000713    11.4  
-##  7   6.57    &lt;NA&gt;     T34         1.66         25.9  
-##  8   1       &lt;NA&gt;     V1          0.213         4.70 
-##  9   0.0189  &lt;NA&gt;     T41         0.00133       0.271
-## 10   0.00164 &lt;NA&gt;     T1          0.0000149     0.181
-## 11   1       &lt;NA&gt;     V2          0.213         4.70 
-## 12 173.      &lt;NA&gt;     T17        34.0         874.</code></pre>
-<pre class="r"><code>  saveRDS(here(&quot;output&quot;,&quot;results-models.rds&quot;))</code></pre>
-<pre><code>## Error in saveRDS(here(&quot;output&quot;, &quot;results-models.rds&quot;)): &#39;file&#39; must be non-empty string</code></pre>
+  })) %&gt;%
+  saveRDS(here(&quot;output&quot;,&quot;results-models.rds&quot;))</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>## R version 4.1.3 (2022-03-10)
 ## Platform: x86_64-w64-mingw32/x64 (64-bit)
