--- a/reports/modelingData.html
+++ b/reports/modelingData.html
@@ -1328,6 +1328,7 @@ if (window.hljs) {
 
 
 
+
 <style type="text/css">
 .main-container {
   max-width: 940px;
@@ -1348,6 +1349,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -1515,15 +1519,15 @@ probability</h1>
 <pre class="r"><code>library(tidyverse)</code></pre>
 <pre><code>## -- Attaching packages --------------------------------------- tidyverse 1.3.1 --</code></pre>
 <pre><code>## v ggplot2 3.3.5     v purrr   0.3.4
-## v tibble  3.1.6     v dplyr   1.0.7
-## v tidyr   1.1.4     v stringr 1.4.0
-## v readr   2.1.1     v forcats 0.5.1</code></pre>
+## v tibble  3.1.6     v dplyr   1.0.8
+## v tidyr   1.2.0     v stringr 1.4.0
+## v readr   2.1.2     v forcats 0.5.1</code></pre>
 <pre><code>## -- Conflicts ------------------------------------------ tidyverse_conflicts() --
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>source(here(&quot;R&quot;,&quot;functions.R&quot;))</code></pre>
-<pre><code>## udunits database from C:/Users/julienv/R/R-4.1.1/units/share/udunits/udunits2.xml</code></pre>
-<pre><code>## Linking to GEOS 3.9.1, GDAL 3.2.1, PROJ 7.2.1</code></pre>
+<pre><code>## udunits database from C:/Users/julienv/AppData/Local/R/R-4.1.3/library/units/share/udunits/udunits2.xml</code></pre>
+<pre><code>## Linking to GEOS 3.9.1, GDAL 3.2.1, PROJ 7.2.1; sf_use_s2() is TRUE</code></pre>
 <pre class="r"><code>library(glmmTMB)
 library(DHARMa)</code></pre>
 <pre><code>## This is DHARMa 0.4.5. For overview type &#39;?DHARMa&#39;. For recent changes, type news(package = &#39;DHARMa&#39;)</code></pre>
@@ -1541,7 +1545,6 @@ library(DHARMa)</code></pre>
 ## i Use `spec()` to retrieve the full column specification for this data.
 ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
 <pre class="r"><code>contrasttype &lt;- &quot;T4&quot;
-contrasthgtclass &lt;- 2
 nottypes &lt;- c(&#39;species&#39;, &#39;locality&#39;,&#39;wildlings&#39;,&#39;age&#39;,&#39;bio01&#39;,&#39;bio19&#39;,
               &#39;seeds.ExP&#39;,&#39;seeds.WALD&#39;,&#39;relelev&#39;,&#39;geometry&#39;,&#39;are&#39;)</code></pre>
 <pre class="r"><code>IV &lt;- readRDS(here(&quot;output&quot;,&quot;independentVars.rds&quot;)) %&gt;% 
@@ -2346,7 +2349,7 @@ testDispersion(simulationOutput)</code></pre>
 
 ## Warning in (function (start, objective, gradient = NULL, hessian = NULL, : NA/
 ## NaN function evaluation</code></pre>
-<pre><code>## Error in optimHess(par.fixed, obj$fn, obj$gr): gradient in optim evaluated to length 1 not 37</code></pre>
+<pre><code>## Error in eigen(h): infinite or missing values in &#39;x&#39;</code></pre>
 <pre class="r"><code>summary(m.genpoisExP)</code></pre>
 <pre><code>## Error in summary(m.genpoisExP): object &#39;m.genpoisExP&#39; not found</code></pre>
 <pre class="r"><code>m.genpoisNULL &lt;- glmmTMB(mf, dat, offset = NULL, family = &quot;genpois&quot;,
@@ -2511,6 +2514,7 @@ summary(m.typesonly)</code></pre>
 <div id="height-stratified-models" class="section level2">
 <h2>Height-stratified models</h2>
 <pre class="r"><code>stratified &lt;- DVi %&gt;% 
+  filter(hgtclass == 2) %&gt;%
   select(species, randomseed, hgtclass) %&gt;% 
   nest(dv = geometry) %&gt;% 
   mutate(data = map(dv, ~ add_wildlings(IVi, .))) %&gt;%
@@ -3236,6 +3240,7 @@ summary(m.typesonly)</code></pre>
 <div id="height-stratified-models-1" class="section level2">
 <h2>Height-stratified models</h2>
 <pre class="r"><code>stratified &lt;- DVi %&gt;% 
+  filter(hgtclass == 2) %&gt;%
   select(species, randomseed, hgtclass) %&gt;% 
   nest(dv = geometry) %&gt;% 
   mutate(data = map(dv, ~ add_wildlings(IVi, .))) %&gt;%
@@ -3884,6 +3889,7 @@ summary(m.typesonly)</code></pre>
 <div id="height-stratified-models-2" class="section level2">
 <h2>Height-stratified models</h2>
 <pre class="r"><code>stratified &lt;- DVi %&gt;% 
+  filter(hgtclass == 2) %&gt;%
   select(species, randomseed, hgtclass) %&gt;% 
   nest(dv = geometry) %&gt;% 
   mutate(data = map(dv, ~ add_wildlings(IVi, .))) %&gt;%
@@ -3893,16 +3899,9 @@ summary(m.typesonly)</code></pre>
 possibly_fit &lt;- possibly(fit_genpoisWALDmodel, otherwise = NA)
 plan(multisession, workers = availableCores()-1)
 stratified &lt;- stratified %&gt;% 
-  mutate(model = future_map(data, ~ possibly_fit(., typenames, contrasttype)))</code></pre>
-<pre><code>## Warning in (function (start, objective, gradient = NULL, hessian = NULL, : NA/
-## NaN function evaluation
+  mutate(model = future_map(data, ~ possibly_fit(., typenames, contrasttype)))
 
-## Warning in (function (start, objective, gradient = NULL, hessian = NULL, : NA/
-## NaN function evaluation
-
-## Warning in (function (start, objective, gradient = NULL, hessian = NULL, : NA/
-## NaN function evaluation</code></pre>
-<pre class="r"><code>newdat &lt;- filter(newdat, is.na(locality))
+newdat &lt;- filter(newdat, is.na(locality))
 stratified &lt;- stratified %&gt;% 
   filter(!is.na(model)) %&gt;% 
   mutate(preds = future_map(model, ~ predict(., newdat, se.fit = TRUE, type = &quot;link&quot;))) %&gt;% 
@@ -3960,39 +3959,39 @@ list(Ps_link, Pa_link, L_link) %&gt;%
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] furrr_0.2.3     future_1.24.0   DHARMa_0.4.5    glmmTMB_1.1.2.3
-##  [5] sf_1.0-3        units_0.7-2     forcats_0.5.1   stringr_1.4.0  
-##  [9] dplyr_1.0.7     purrr_0.3.4     readr_2.1.1     tidyr_1.1.4    
+##  [1] furrr_0.2.3     future_1.24.0   DHARMa_0.4.5    glmmTMB_1.1.3  
+##  [5] sf_1.0-7        units_0.8-0     forcats_0.5.1   stringr_1.4.0  
+##  [9] dplyr_1.0.8     purrr_0.3.4     readr_2.1.2     tidyr_1.2.0    
 ## [13] tibble_3.1.6    ggplot2_3.3.5   tidyverse_1.3.1 here_1.0.1     
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] nlme_3.1-155        fs_1.5.0            bit64_4.0.5        
-##  [4] lubridate_1.7.10    httr_1.4.2          rprojroot_2.0.2    
-##  [7] numDeriv_2016.8-1.1 tools_4.1.3         TMB_1.7.22         
-## [10] backports_1.3.0     bslib_0.3.1         utf8_1.2.2         
-## [13] R6_2.5.1            KernSmooth_2.23-20  DBI_1.1.1          
-## [16] colorspace_2.0-3    withr_2.4.3         tidyselect_1.1.1   
-## [19] bit_4.0.4           compiler_4.1.3      cli_3.0.1          
-## [22] rvest_1.0.1         xml2_1.3.2          sass_0.4.0         
+##  [1] nlme_3.1-155        fs_1.5.2            bit64_4.0.5        
+##  [4] lubridate_1.8.0     httr_1.4.2          rprojroot_2.0.2    
+##  [7] numDeriv_2016.8-1.1 tools_4.1.3         TMB_1.8.1          
+## [10] backports_1.4.1     bslib_0.3.1         utf8_1.2.2         
+## [13] R6_2.5.1            KernSmooth_2.23-20  DBI_1.1.2          
+## [16] colorspace_2.0-3    withr_2.5.0         tidyselect_1.1.2   
+## [19] bit_4.0.4           compiler_4.1.3      cli_3.2.0          
+## [22] rvest_1.0.2         xml2_1.3.3          sass_0.4.1         
 ## [25] scales_1.1.1        mvtnorm_1.1-3       classInt_0.4-3     
 ## [28] proxy_0.4-26        digest_0.6.29       minqa_1.2.4        
-## [31] rmarkdown_2.11      pkgconfig_2.0.3     htmltools_0.5.2    
+## [31] rmarkdown_2.13      pkgconfig_2.0.3     htmltools_0.5.2    
 ## [34] parallelly_1.30.0   lme4_1.1-28         bbmle_1.0.24       
 ## [37] highr_0.9           dbplyr_2.1.1        fastmap_1.1.0      
-## [40] rlang_1.0.1         readxl_1.3.1        rstudioapi_0.13    
-## [43] jquerylib_0.1.4     generics_0.1.1      jsonlite_1.7.2     
-## [46] vroom_1.5.7         magrittr_2.0.2      Matrix_1.4-0       
-## [49] Rcpp_1.0.8          munsell_0.5.0       fansi_1.0.2        
-## [52] lifecycle_1.0.1     stringi_1.7.5       yaml_2.2.1         
+## [40] rlang_1.0.2         readxl_1.3.1        rstudioapi_0.13    
+## [43] jquerylib_0.1.4     generics_0.1.2      jsonlite_1.8.0     
+## [46] vroom_1.5.7         magrittr_2.0.2      Matrix_1.4-1       
+## [49] Rcpp_1.0.8.3        munsell_0.5.0       fansi_1.0.2        
+## [52] lifecycle_1.0.1     stringi_1.7.6       yaml_2.3.5         
 ## [55] MASS_7.3-55         grid_4.1.3          parallel_4.1.3     
 ## [58] listenv_0.8.0       bdsmatrix_1.3-4     crayon_1.5.0       
 ## [61] lattice_0.20-45     haven_2.4.3         splines_4.1.3      
-## [64] hms_1.1.1           knitr_1.36          pillar_1.7.0       
+## [64] hms_1.1.1           knitr_1.37          pillar_1.7.0       
 ## [67] boot_1.3-28         stats4_4.1.3        codetools_0.2-18   
-## [70] reprex_2.0.1        glue_1.6.1          evaluate_0.14      
+## [70] reprex_2.0.1        glue_1.6.2          evaluate_0.15      
 ## [73] modelr_0.1.8        vctrs_0.3.8         nloptr_2.0.0       
-## [76] tzdb_0.1.2          cellranger_1.1.0    gtable_0.3.0       
-## [79] assertthat_0.2.1    xfun_0.26           broom_0.7.9        
+## [76] tzdb_0.2.0          cellranger_1.1.0    gtable_0.3.0       
+## [79] assertthat_0.2.1    xfun_0.30           broom_0.7.12       
 ## [82] e1071_1.7-9         class_7.3-20        globals_0.14.0     
 ## [85] ellipsis_0.3.2      gap_1.2.3-1</code></pre>
 </div>
